# Streamlit-Chatbot

./: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yaml  main.py  pyproject.toml  repository.py  requirements.txt  service.py
app/: streamlit_app.py
local_llm/: Dockerfile  README.md  app.py
